--- a/fetch/server/package.json
+++ b/fetch/server/package.json
@@ -10,6 +10,7 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.17.1",
+        "jsdom": "^18.1.1",
         "nodemon": "^2.0.15"
     }
 }
