--- a/React_Intro_selfStudy/ReactReducer/ReducerReact/Practice1_reduceReact/package.json
+++ b/React_Intro_selfStudy/ReactReducer/ReducerReact/Practice1_reduceReact/package.json
@@ -10,7 +10,8 @@
     "@mui/material": "^5.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "uuid": "^8.3.2"
   },
   "browserslist": {
     "production": [
