--- a/React_Intro_selfStudy/ReactReducer/ReducerReact/Practice1_reduceReact/package.json
+++ b/React_Intro_selfStudy/ReactReducer/ReducerReact/Practice1_reduceReact/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
+    "immer": "^9.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
