removing the boostrap from project

--- a/Angular_SelfStudy/Practice_selfStudy/pre-workout/angular.json
+++ b/Angular_SelfStudy/Practice_selfStudy/pre-workout/angular.json
@@ -20,10 +20,7 @@
             "tsConfig": "tsconfig.app.json",
             "aot": false,
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
-            ],
+            "styles": ["src/styles.css"],
             "scripts": []
           },
           "configurations": {
