--- a/Angular_SelfStudy/Practice_selfStudy/pre-workout/angular.json
+++ b/Angular_SelfStudy/Practice_selfStudy/pre-workout/angular.json
@@ -20,7 +20,12 @@
             "tsConfig": "tsconfig.app.json",
             "aot": false,
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.css"],
+            "styles": [
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "src/styles.css"
+            ],
             "scripts": []
           },
           "configurations": {
